--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/hapi": "^20.2.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
+    "joi": "^17.6.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
