--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start ./src/app.js",
+    "start": "node ./dist/index.js",
     "dev": "nodemon ./src/app.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "build": "ncc build ./src/app.js -o ./dist"
   },
   "keywords": [],
   "author": "",
