--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@hapi/hapi": "^20.2.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
-    "joi": "^17.6.0",
-    "nodemon": "^2.0.16"
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.16"
   }
 }
