--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
+    "form-data": "^4.0.0",
     "joi": "^17.6.0"
   },
   "devDependencies": {
