Add some env variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ SERVICE_ACCOUNT_AUTH_URI =
 SERVICE_ACCOUNT_TOKEN_URI =
 SERVICE_ACCOUNT_AUTH_CERT_URL =
 SERVICE_ACCOUNT_CLIENT_CERT_URL =
+BUCKET_NAME=
+USE_AUTH=
 HOST = localhost
 ORIGIN =
 NODE_ENV = development
